Split RailwayData module